--- a/De/index.html
+++ b/De/index.html
@@ -30,12 +30,12 @@
     <meta name="keywords" content="discord pfp viewer, discord pfp downloader, discord pfp grabber, discord profilbild viewer, discord profilbild downloader, discord profil viewer, discord avatar viewer, discord profilbild viewer, discord pfp anzeigen, discord pfp extrahieren, discord avatar viewer, discord profil downloader">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Discord PFP Viewer Tool">
-    <link rel="canonical" href="https://pfpsaver.com/De/index.html">
-    <link rel="alternate" hreflang="en" href="https://pfpsaver.com/index.html">
-    <link rel="alternate" hreflang="fr" href="https://pfpsaver.com/Fr/index.html">
-    <link rel="alternate" hreflang="de" href="https://pfpsaver.com/De/index.html">
-    <link rel="alternate" hreflang="es" href="https://pfpsaver.com/Es/index.html">
-    <link rel="alternate" hreflang="ar" href="https://pfpsaver.com/Ar/index.html">
+    <link rel="canonical" href="https://pfpsaver.com/De/">
+    <link rel="alternate" hreflang="en" href="https://pfpsaver.com/">
+    <link rel="alternate" hreflang="fr" href="https://pfpsaver.com/Fr/">
+    <link rel="alternate" hreflang="de" href="https://pfpsaver.com/De/">
+    <link rel="alternate" hreflang="es" href="https://pfpsaver.com/Es/">
+    <link rel="alternate" hreflang="ar" href="https://pfpsaver.com/Ar/">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     
     <!-- Open Graph Meta Tags -->
@@ -68,7 +68,7 @@
       "@type": "WebApplication",
       "name": "Discord PFP Viewer - Discord-Profilbild-Viewer",
       "description": "Bestes Discord PFP Viewer, Downloader und Grabber-Tool. Discord-Profilbilder, Avatare und Banner nach Benutzer-ID anzeigen und herunterladen. Kostenloser Discord-Profilbild-Viewer mit hochwertigen Downloads.",
-      "url": "https://pfpsaver.com/De/index.html",
+      "url": "https://pfpsaver.com/De/",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Web Browser",
       "offers": {
@@ -151,7 +151,7 @@
         <div class="container">
             <!-- Logo and Brand -->
             <div class="brand">
-                <a href="/De/index.html" class="logo" aria-label="Discord-Profil-Viewer-Startseite">
+                <a href="/De/" class="logo" aria-label="Discord-Profil-Viewer-Startseite">
                     <span class="logo-icon">💜</span>
                     <span class="logo-text">Haftungsausschluss: Unsere Website ist <u>nicht mit</u> Discord Inc verbunden</span>
                 </a>
@@ -508,11 +508,11 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">Discord-Profil-Tools</h4>
                     <ul class="footer-links">
-                        <li><a href="/De/index.html" title="Discord PFP Viewer">Discord PFP Viewer</a></li>
-                        <li><a href="/De/index.html" title="Discord PFP Downloader">Discord PFP Downloader</a></li>
-                        <li><a href="/De/index.html" title="Discord PFP Viewer">Discord PFP Viewer</a></li>
-                        <li><a href="/De/index.html" title="Discord-Profilbild-Downloader">Discord-Profilbild-Downloader</a></li>
-                        <li><a href="/De/index.html" title="Discord-Profilbild-Viewer">Discord-Profilbild-Viewer</a></li>
+                        <li><a href="/De/" title="Discord PFP Viewer">Discord PFP Viewer</a></li>
+                        <li><a href="/De/" title="Discord PFP Downloader">Discord PFP Downloader</a></li>
+                        <li><a href="/De/" title="Discord PFP Viewer">Discord PFP Viewer</a></li>
+                        <li><a href="/De/" title="Discord-Profilbild-Downloader">Discord-Profilbild-Downloader</a></li>
+                        <li><a href="/De/" title="Discord-Profilbild-Viewer">Discord-Profilbild-Viewer</a></li>
                         <li><a href="webhook-sender.html" title="Discord Webhook Sender">Discord Webhook Sender</a></li>
                     </ul>
                 </div>
@@ -520,9 +520,9 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">Über</h4>
                     <ul class="footer-links">
-                        <li><a href="/privacy-policy/index.html">Datenschutzrichtlinie</a></li>
-                        <li><a href="/terms-of-service/index.html">Nutzungsbedingungen</a></li>
-                        <li><a href="/contact/index.html">Kontakt</a></li>
+                        <li><a href="/privacy-policy/">Datenschutzrichtlinie</a></li>
+                        <li><a href="/terms-of-service/">Nutzungsbedingungen</a></li>
+                        <li><a href="/contact/">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
