--- a/Es/index.html
+++ b/Es/index.html
@@ -508,11 +508,11 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">Herramientas de Perfil de Discord</h4>
                     <ul class="footer-links">
-                        <li><a href="/Es/index.html" title="Visor Discord PFP">Visor Discord PFP</a></li>
-                        <li><a href="/Es/index.html" title="Descargador Discord PFP">Descargador Discord PFP</a></li>
-                        <li><a href="/Es/index.html" title="Visor Discord PFP">Visor Discord PFP</a></li>
-                        <li><a href="/Es/index.html" title="Descargador de Foto de Perfil de Discord">Descargador de Foto de Perfil de Discord</a></li>
-                        <li><a href="/Es/index.html" title="Visor de Foto de Perfil de Discord">Visor de Foto de Perfil de Discord</a></li>
+                        <li><a href="/Es/" title="Visor Discord PFP">Visor Discord PFP</a></li>
+                        <li><a href="/Es/" title="Descargador Discord PFP">Descargador Discord PFP</a></li>
+                        <li><a href="/Es/" title="Visor Discord PFP">Visor Discord PFP</a></li>
+                        <li><a href="/Es/" title="Descargador de Foto de Perfil de Discord">Descargador de Foto de Perfil de Discord</a></li>
+                        <li><a href="/Es/" title="Visor de Foto de Perfil de Discord">Visor de Foto de Perfil de Discord</a></li>
                         <li><a href="webhook-sender.html" title="Remitente de Webhook de Discord">Remitente de Webhook de Discord</a></li>
                     </ul>
                 </div>
