--- a/Fr/index.html
+++ b/Fr/index.html
@@ -30,19 +30,19 @@
     <meta name="keywords" content="visionneuse discord pfp, téléchargeur discord pfp, grabber discord pfp, visionneuse photo profil discord, téléchargeur photo profil discord, visionneuse profil discord, visionneuse avatar discord, visionneuse photo profil discord, afficher discord pfp, extracteur discord pfp, visionneuse avatar discord, visionneuse profil discord">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Outil de visionneuse Discord PFP">
-    <link rel="canonical" href="https://pfpsaver.com/Fr/index.html">
-    <link rel="alternate" hreflang="en" href="https://pfpsaver.com/index.html">
-    <link rel="alternate" hreflang="fr" href="https://pfpsaver.com/Fr/index.html">
-    <link rel="alternate" hreflang="de" href="https://pfpsaver.com/De/index.html">
-    <link rel="alternate" hreflang="es" href="https://pfpsaver.com/Es/index.html">
-    <link rel="alternate" hreflang="ar" href="https://pfpsaver.com/Ar/index.html">
+    <link rel="canonical" href="https://pfpsaver.com/Fr/">
+    <link rel="alternate" hreflang="en" href="https://pfpsaver.com/">
+    <link rel="alternate" hreflang="fr" href="https://pfpsaver.com/Fr/">
+    <link rel="alternate" hreflang="de" href="https://pfpsaver.com/De/">
+    <link rel="alternate" hreflang="es" href="https://pfpsaver.com/Es/">
+    <link rel="alternate" hreflang="ar" href="https://pfpsaver.com/Ar/">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Discord PFP Viewer - Afficher et Télécharger les Photos de Profil & Avatars Discord">
     <meta property="og:description" content="Visionneuse Discord PFP et téléchargeur gratuits. Affichez et téléchargez les photos de profil, avatars et bannières Discord par ID utilisateur. Meilleur viewer Discord PFP avec téléchargements haute qualité.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pfpsaver.com/Fr/index.html">
+    <meta property="og:url" content="https://pfpsaver.com/Fr/">
     <meta property="og:image" content="https://pfpsaver.com/pfpdicor.svg">
     <meta property="og:site_name" content="Visionneuse Discord PFP">
     
@@ -68,7 +68,7 @@
       "@type": "WebApplication",
       "name": "Discord PFP Viewer - Visionneuse Photo Profil Discord",
       "description": "Meilleur outil visionneuse Discord PFP, téléchargeur et grabber. Affichez et téléchargez les photos de profil, avatars et bannières Discord par ID utilisateur. Visionneuse de photos de profil Discord gratuite avec téléchargements haute qualité.",
-      "url": "https://pfpsaver.com/Fr/index.html",
+      "url": "https://pfpsaver.com/Fr/",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Web Browser",
       "offers": {
@@ -129,7 +129,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Discord PFP Viewer - Visionneuse Photo Profil Discord",
-      "url": "https://pfpsaver.com/Fr/index.html"
+      "url": "https://pfpsaver.com/Fr/"
     }
     </script>
      <script type="text/javascript">
@@ -151,7 +151,7 @@
         <div class="container">
             <!-- Logo and Brand -->
             <div class="brand">
-                <a href="/Fr/index.html" class="logo" aria-label="Accueil de la visionneuse de profil Discord">
+                <a href="/Fr/" class="logo" aria-label="Accueil de la visionneuse de profil Discord">
                     <span class="logo-icon">💜</span>
                     <span class="logo-text">Avis de non-responsabilité : Notre site web <u>n'est pas affilié</u> à Discord Inc</span>
                 </a>
@@ -508,9 +508,9 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">Outils de Profil Discord</h4>
                     <ul class="footer-links">
-                        <li><a href="/Fr/index.html" title="Visionneuse Discord PFP">Visionneuse Discord PFP</a></li>
-                        <li><a href="/Fr/index.html" title="Télécharger le PFP Discord">Télécharger le PFP Discord</a></li>
-                        <li><a href="/Fr/index.html" title="Comment voir le PFP Discord">Comment voir le PFP Discord</a></li>
+                        <li><a href="/Fr/" title="Visionneuse Discord PFP">Visionneuse Discord PFP</a></li>
+                        <li><a href="/Fr/" title="Télécharger le PFP Discord">Télécharger le PFP Discord</a></li>
+                        <li><a href="/Fr/" title="Comment voir le PFP Discord">Comment voir le PFP Discord</a></li>
                         <li><a href="/discord-pfp-viewer-hd.html" title="Visionneuse Discord PFP HD">Visionneuse Discord PFP HD</a></li>
                         <li><a href="/discord-pfp-mobile.html" title="Voir le PFP Discord sur Mobile">Voir le PFP Discord sur Mobile</a></li>
                         <li><a href="/discord-gif-pfp-viewer.html" title="Visionneuse de GIF PFP Discord">Visionneuse de GIF PFP Discord</a></li>
@@ -522,9 +522,9 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">À propos</h4>
                     <ul class="footer-links">
-                        <li><a href="/privacy-policy/index.html">Politique de confidentialité</a></li>
-                        <li><a href="/terms-of-service/index.html">Conditions d'utilisation</a></li>
-                        <li><a href="/contact/index.html">Contact</a></li>
+                        <li><a href="/privacy-policy/">Politique de confidentialité</a></li>
+                        <li><a href="/terms-of-service/">Conditions d'utilisation</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                     </ul>
                 </div>
             </div>
