--- a/Ar/index.html
+++ b/Ar/index.html
@@ -30,19 +30,19 @@
     <meta name="keywords" content="عارض صورة ملف Discord, تنزيل صورة ملف Discord, استخراج صورة ملف Discord, عارض صورة الملف الشخصي في Discord, تنزيل صورة الملف الشخصي في Discord, عارض الملف الشخصي في Discord, عارض الأفاتار في Discord, عرض صورة ملف Discord, استخراج صورة ملف Discord, عارض الأفاتار في Discord, تنزيل ملف شخصي في Discord">
     <meta name="robots" content="index, follow">
     <meta name="author" content="أداة عارض صور ملفات Discord">
-    <link rel="canonical" href="https://pfpsaver.com/De/Ar/index.html">
-    <link rel="alternate" hreflang="en" href="https://pfpsaver.com/index.html">
-    <link rel="alternate" hreflang="fr" href="https://pfpsaver.com/Fr/index.html">
-    <link rel="alternate" hreflang="de" href="https://pfpsaver.com/De/index.html">
-    <link rel="alternate" hreflang="es" href="https://pfpsaver.com/Es/index.html">
-    <link rel="alternate" hreflang="ar" href="https://pfpsaver.com/Ar/index.html">
+    <link rel="canonical" href="https://pfpsaver.com/De/Ar/">
+    <link rel="alternate" hreflang="en" href="https://pfpsaver.com/">
+    <link rel="alternate" hreflang="fr" href="https://pfpsaver.com/Fr/">
+    <link rel="alternate" hreflang="de" href="https://pfpsaver.com/De/">
+    <link rel="alternate" hreflang="es" href="https://pfpsaver.com/Es/">
+    <link rel="alternate" hreflang="ar" href="https://pfpsaver.com/Ar/">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="عارض صور ملفات Discord - عرض وتنزيل صور الملفات الشخصية والأفاتار في Discord">
     <meta property="og:description" content="عارض وتنزيل صور ملفات Discord المجاني. عرض وتنزيل صور الملفات الشخصية والأفاتار والبانر في Discord باستخدام معرف المستخدم. أفضل أداة عرض صور ملفات Discord مع تنزيلات عالية الجودة.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pfpsaver.com/Ar/index.html">
+    <meta property="og:url" content="https://pfpsaver.com/Ar/">
     <meta property="og:image" content="https://pfpsaver.com/pfpdicor.svg">
     <meta property="og:site_name" content="عارض صور ملفات Discord">
     
@@ -68,7 +68,7 @@
       "@type": "WebApplication",
       "name": "عارض صور ملفات Discord - عارض صورة الملف الشخصي في Discord",
       "description": "أفضل أداة عارض وتنزيل واستخراج صور ملفات Discord. عرض وتنزيل صور الملفات الشخصية وصور الأفاتار والبانر في Discord باستخدام معرف المستخدم. أداة عرض صور الملفات الشخصية في Discord مجانية مع تنزيلات عالية الجودة.",
-      "url": "https://pfpsaver.com/Ar/index.html",
+      "url": "https://pfpsaver.com/Ar/",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Web Browser",
       "offers": {
@@ -129,7 +129,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "عارض صور ملفات Discord - عارض صورة الملف الشخصي في Discord",
-      "url": "https://pfpsaver.com/Ar/index.html"
+      "url": "https://pfpsaver.com/Ar/"
     }
     </script>
      <script type="text/javascript">
@@ -151,7 +151,7 @@
         <div class="container">
             <!-- Logo and Brand -->
             <div class="brand">
-                <a href="/Ar/index.html" class="logo" aria-label="الصفحة الرئيسية لعارض ملفات Discord">
+                <a href="/Ar/" class="logo" aria-label="الصفحة الرئيسية لعارض ملفات Discord">
                     <span class="logo-icon">💜</span>
                     <span class="logo-text">تنويه: موقعنا <u>غير مرتبط</u> بشركة Discord Inc</span>
                 </a>
@@ -520,9 +520,9 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">حول</h4>
                     <ul class="footer-links">
-                        <li><a href="/privacy-policy/index.html">سياسة الخصوصية</a></li>
-                        <li><a href="/terms-of-service/index.html">شروط الخدمة</a></li>
-                        <li><a href="/contact/index.html">اتصل بنا</a></li>
+                        <li><a href="/privacy-policy/">سياسة الخصوصية</a></li>
+                        <li><a href="/terms-of-service/">شروط الخدمة</a></li>
+                        <li><a href="/contact/">اتصل بنا</a></li>
                     </ul>
                 </div>
             </div>
