--- a/webhook-sender-fr.html
+++ b/webhook-sender-fr.html
@@ -248,7 +248,7 @@
         <div class="container">
             <!-- Logo and Brand -->
             <div class="brand">
-                <a href="https://pfpsaver.com/Fr/index.html" class="logo" aria-label="Accueil de l'Expéditeur de Webhook Discord">
+                <a href="https://pfpsaver.com/Fr/" class="logo" aria-label="Accueil de l'Expéditeur de Webhook Discord">
                     <span class="logo-icon">💜</span>
                     <span class="logo-text">Avertissement : Notre site web <u>n'est pas affilié</u> à Discord Inc</span>
                 </a>
@@ -490,9 +490,9 @@
                 <div class="footer-section">
                     <h4 class="footer-subtitle">Outils Discord</h4>
                     <ul class="footer-links">
-                        <li><a href="https://pfpsaver.com/Fr/index.html" title="Grabber Discord PFP">Grabber Discord PFP</a></li>
-                        <li><a href="https://pfpsaver.com/Fr/index.html" title="Téléchargeur Discord PFP">Téléchargeur Discord PFP</a></li>
-                        <li><a href="https://pfpsaver.com/Fr/index.html">" title="Visionneuse Discord PFP">Visionneuse Discord PFP</a></li>
+                        <li><a href="https://pfpsaver.com/Fr/" title="Grabber Discord PFP">Grabber Discord PFP</a></li>
+                        <li><a href="https://pfpsaver.com/Fr/" title="Téléchargeur Discord PFP">Téléchargeur Discord PFP</a></li>
+                        <li><a href="https://pfpsaver.com/Fr/">" title="Visionneuse Discord PFP">Visionneuse Discord PFP</a></li>
                         <li><a href="webhook-sender-fr.html" title="Expéditeur de Webhook Discord">Expéditeur de Webhook Discord</a></li>
                     </ul>
                 </div>
